<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>katBrew</artifactId>
        <groupId>com.katbrew</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>entities</artifactId>
    <dependencies>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>com.katbrew</groupId>
            <artifactId>entities-interfaces</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security.oauth</groupId>
            <artifactId>spring-security-oauth2</artifactId>
            <version>2.5.2.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-oauth2-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-oauth2-jose</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>jooq</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jooq</groupId>
                        <artifactId>jooq-codegen-maven</artifactId>
                        <version>3.19.16</version>
                        <executions>
                            <execution>
                                <id>generate-jooq-sources</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>generate</goal>
                                </goals>
                                <configuration>
                                    <jdbc>
                                        <driver>org.postgresql.Driver</driver>
                                        <url>jdbc:postgresql://192.168.0.158:5432/krc20backend?schema=public</url>
                                        <user>postgres</user>
                                        <password>root</password>
                                    </jdbc>
                                    <generator>
                                        <generate>
                                            <pojos>true</pojos>
                                            <daos>true</daos>
                                            <interfaces>true</interfaces>
                                            <pojosEqualsAndHashCode>true</pojosEqualsAndHashCode>
                                            <javaTimeTypes>true</javaTimeTypes>
                                        </generate>
                                        <database>
                                            <name>org.jooq.meta.postgres.PostgresDatabase</name>
                                            <inputSchema>public</inputSchema>

                                            <includes>.*</includes>
                                            <excludes>
                                                DATABASECHANGELOG
                                                | DATABASECHANGELOGLOCK
                                                | spring_session
                                                | spring_session_attributes
                                                | act_.*
                                            </excludes>
                                            <forcedTypes>
                                                <forcedType>
                                                    <userType>java.math.BigInteger</userType>
                                                    <types>BIGINT</types>
                                                </forcedType>
                                                <forcedType>
                                                    <userType>java.math.BigInteger</userType>
                                                    <includeExpression>.*\.MAX|.*\.LIM|.*\.PRE|.*\.MTS_ADD|.*\.MTS_MOD|.*\.MINTED|.*\.TRANSFER_TOTAL|.*\.BALANCE|.*\.AMT|.*\.OP_SCORE|.*\.OP_SCORE_ADD|.*\.OP_SCORE_MOD</includeExpression>
                                                </forcedType>
<!--                                                <forcedType>-->
<!--                                                    <userType>java.util.List</userType>-->
<!--                                                    <includeExpression>.*\.BALANCES</includeExpression>-->
<!--                                                </forcedType>-->
                                            </forcedTypes>
                                        </database>
                                        <target>
                                            <clean>true</clean>
                                            <packageName>com.katbrew.entities.jooq.db</packageName>
                                            <directory>src/main/java/</directory>
                                        </target>

                                    </generator>
                                </configuration>
                            </execution>
                        </executions>
                        <dependencies>
                            <dependency>
                                <groupId>org.jooq</groupId>
                                <artifactId>jooq-meta</artifactId>
                                <version>3.19.16</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>